--- a/toplevel/BUILD.bazel
+++ b/toplevel/BUILD.bazel
@@ -1,22 +1,22 @@
 load("//bzl:rules.bzl",
-     "bootstrap_archive",
-     "bootstrap_executable",
-     "bootstrap_library",
-     "bootstrap_module",
+     "boot_archive",
+     "boot_executable",
+     "boot_library",
+     "boot_module",
      "bootstrap_repl",
-     "bootstrap_signature",
+     "boot_signature",
      "bootstrap_test",
 )
 
-load("//config:CONFIG.bzl",
-     "ROOT_MODULE_OPTS",
-     "ROOT_SIG_OPTS"
-     )
+# load("//config:CONFIG.bzl",
+#      "ROOT_MODULE_OPTS",
+#      "ROOT_SIG_OPTS"
+#      )
 
 load("//stdlib:BUILD.bzl", "STDLIB_MODULE_NAMES")
 
-MODULE_OPTS = ROOT_MODULE_OPTS
-SIG_OPTS    = ROOT_MODULE_OPTS # + ["-nopervasives"]
+MODULE_OPTS = [] #ROOT_MODULE_OPTS
+SIG_OPTS    = [] #ROOT_MODULE_OPTS # + ["-nopervasives"]
 
 ################################################################
 ## the repl command is 'ocaml', which is a target in the root
@@ -42,7 +42,7 @@ SIG_OPTS    = ROOT_MODULE_OPTS # + ["-nopervasives"]
 # 	$(MAKE) ocaml
 # 	@$(EXTRAPATH) $(RLWRAP) $(OCAMLRUN) ./ocaml$(EXE) $(OC_TOPFLAGS)
 
-# bootstrap_executable(
+# boot_executable(
 #     name = "ocaml.tmp",
 #     main = ":Topstart",
 #     opts = ["-linkall"],
@@ -96,7 +96,7 @@ bootstrap_repl(
 
 ################################################################
 ## dev/test, build all
-bootstrap_library(
+boot_library(
     name = "toplevel",
     manifest  = [
         ":Expunge",
@@ -150,14 +150,14 @@ TOPLEVEL_CMI = [
     ":Toploop_cmi",
 ]
 
-bootstrap_archive(
+boot_archive(
     name = "ocamltoplevel", # //toplevel:archive instead of ocamltoplevel?
     manifest  = TOPLEVEL,
     # deps      = TOPLEVEL_CMI
 )
 
 ################################################################
-bootstrap_module(
+boot_module(
     name   = "Expunge",
     struct = "expunge.ml",
     opts = MODULE_OPTS,
@@ -177,7 +177,7 @@ bootstrap_module(
     visibility = ["//utils:__pkg__"]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Genprintval",
     struct = "genprintval.ml",
     sig    = "Genprintval_cmi",
@@ -209,7 +209,7 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Genprintval_cmi",
     src  = "genprintval.mli",
     opts = SIG_OPTS,
@@ -222,7 +222,7 @@ bootstrap_signature(
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Topcommon",
     struct = "topcommon.ml",
     sig    = "Topcommon_cmi",
@@ -269,7 +269,7 @@ bootstrap_module(
     visibility = ["//toplevel/byte:__pkg__"]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Topcommon_cmi",
     src  = "topcommon.mli",
     opts = SIG_OPTS,
@@ -292,7 +292,7 @@ bootstrap_signature(
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Topdirs",
     struct = "topdirs.ml",
     sig    = "Topdirs_cmi",
@@ -333,7 +333,7 @@ bootstrap_module(
     visibility = ["//toplevel/byte:__pkg__"]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Topdirs_cmi",
     src  = "topdirs.mli",
     opts = SIG_OPTS,
@@ -343,7 +343,7 @@ bootstrap_signature(
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Topeval",
     struct = select({
         # "//toplevel:bytecode": "//toplevel/byte:topeval.ml",
@@ -399,7 +399,7 @@ bootstrap_module(
     visibility = ["//toplevel:__pkg__"]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Topeval_cmi",
     src  = "topeval.mli",
     opts = SIG_OPTS,
@@ -412,7 +412,7 @@ bootstrap_signature(
     visibility = ["//toplevel:__subpackages__"]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Toploop",
     struct = "toploop.ml",
     sig    = "Toploop_cmi",
@@ -447,7 +447,7 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Toploop_cmi",
     src  = "toploop.mli",
     opts = SIG_OPTS,
@@ -467,7 +467,7 @@ bootstrap_signature(
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Topmain",
     struct = select({
         # "//toplevel:bytecode": "//toplevel/byte:topmain.ml",
@@ -506,16 +506,16 @@ bootstrap_module(
     visibility = ["//toplevel:__pkg__"]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Topmain_cmi",
     src  = "topmain.mli",
-    opts = SIG_OPTS + ["-nopervasives"],
+    opts = SIG_OPTS, # + ["-nopervasives"],
     deps   = [
     ],
     visibility = ["//toplevel:__subpackages__"]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Topstart",
     struct = "topstart.ml",
     opts = MODULE_OPTS,
@@ -524,7 +524,7 @@ bootstrap_module(
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Trace",
     struct = select({
         # "//toplevel:bytecode": "//toplevel/byte:trace.ml",
@@ -551,7 +551,7 @@ bootstrap_module(
     visibility = ["//toplevel:__pkg__"]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Trace_cmi",
     src  = "trace.mli",
     opts = SIG_OPTS,
