--- a/.bazelrc
+++ b/.bazelrc
@@ -1,7 +1,7 @@
 ## put this in ~/.bazelrc to enable for all bazel projects
 # build --incompatible_enable_cc_toolchain_resolution
 
-build --toolchain_resolution_debug=.*
+# build --toolchain_resolution_debug=.*
 # build --toolchain_resolution_debug=@bazel_tools//tools/cpp:toolchain_type
 
 #### alternate toolchain: pass tc and profile if needed
@@ -49,17 +49,22 @@ build:boot --platforms=//platforms/target:boot
 build:dev --host_platform=//platforms/build:dev
 build:dev --platforms=//platforms/target:dev
 
-build:vmvm --host_platform=//platforms:vm
-build:vmvm --platforms=//platforms:vm
+build:vmvm --host_platform=//platforms/build:vm
+build:vmvm --platforms=//platforms/target:vm
 
-build:sysvm --host_platform=//platforms:sys
-build:sysvm --platforms=//platforms:vm
+build:sysvm --host_platform=//platforms/build:sys
+build:sysvm --platforms=//platforms/target:vm
 
-build:vmsys --host_platform=//platforms:vm
-build:vmsys --platforms=//platforms:sys
+build:vmsys --host_platform=//platforms/build:vm
+build:vmsys --platforms=//platforms/target:sys
 
 build:syssys --host_platform=//platforms:sys
 build:syssys --platforms=//platforms:sys
+
+#### cross-compilation
+build:vmvmsys --host_platform=//platforms:vm
+build:vmvmsys --platforms=//platforms/xtarget=sys
+
 
 ################################################################
 ## enable debug for ocamlrun:
