--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,439 +1,36 @@
-load("@bazel_skylib//rules:common_settings.bzl",
-     "string_flag", "string_setting")
-
-load("//bzl:rules.bzl",
-     "bootstrap_archive",
-     "bootstrap_executable",
-     "bootstrap_module",
-)
-
-package(default_visibility = ["//visibility:public"])
+load("@bazel_skylib//rules:build_test.bzl", "build_test")
 
 exports_files(["Makefile.config", "VERSION"])
 
-## cross-compiler cross-targets
-string_flag(name = "xtarget", build_setting_default = "sys")
+build_test(
+    name = "toolchain",
+    targets = [
+        "//boot/bin:ocamlc",
+        "//boot/bin:ocamlopt",
+        # "//boot/bin:ocamlc.opt",
+        # "//boot/bin:ocamlopt.opt",
 
-config_setting(name = "vm?", flag_values = {":xtarget": "vm"})
-config_setting(name = "sys?", flag_values = {":xtarget": "sys"})
-# OCaml arch names
-config_setting(name = "amd64?", flag_values = {":xtarget": "amd64"})
-config_setting(name = "arm?", flag_values = {":xtarget": "arm"})
-config_setting(name = "arm64?", flag_values = {":xtarget": "arm64"})
-config_setting(name = "i386?", flag_values = {":xtarget": "i386"})
-config_setting(name = "power?", flag_values = {":xtarget": "power"})
-config_setting(name = "riscv?", flag_values = {":xtarget": "riscv"})
-config_setting(name = "s390x?", flag_values = {":xtarget": "s390x"})
+        "//boot/bin:ocamllex",
 
-# Bazel-defined arch names
-# see https://github.com/bazelbuild/platforms/blob/main/cpu/BUILD
-alias(name = "aarch64", actual = ":arm64")
-config_setting(name = "aarch64?", flag_values = {":xtarget": "x86_64"})
-# config_setting(name = "arm?", flag_values = {":xtarget": "arm"})
-config_setting(name = "armv6-m?", flag_values = {":xtarget": "armv6-m"})
-config_setting(name = "armv7?", flag_values = {":xtarget": "armv7"})
-config_setting(name = "armv7k?", flag_values = {":xtarget": "armv7k"})
-config_setting(name = "armv7-m?", flag_values = {":xtarget": "armv7-m"})
-config_setting(name = "armv7e-m?", flag_values = {":xtarget": "armv7e-m"})
-config_setting(name = "armv7e-mf?", flag_values = {":xtarget": "armv7e-mf"})
-config_setting(name = "armv8-m?", flag_values = {":xtarget": "armv8-m"})
-# config_setting(name = "arm64?", flag_values = {":xtarget": "arm64"})
-config_setting(name = "arm64_32?", flag_values = {":xtarget": "arm64_32"})
-config_setting(name = "arm64e", flag_values = {":xtarget": "arm64e"})
-alias(name = "ppx", actual = ":power")
-config_setting(name = "x86_32?", flag_values = {":xtarget": "x86_32"})
-config_setting(name = "x86_64?", flag_values = {":xtarget": "x86_64"})
-config_setting(name = "wasm64?", flag_values = {":xtarget": "wasm64"})
-config_setting(name = "mips64?", flag_values = {":xtarget": "mips64"})
-config_setting(name = "riscv32?", flag_values = {":xtarget": "riscv32"})
-config_setting(name = "riscv64?", flag_values = {":xtarget": "riscv64"})
-
-
-## FIXME: most of this stuff is obsolete, moved to other pkgs.
-
-##############################
-####  Executable Targets  ####
-MAIN_OPTS = [
-    "-principal",
-    "-nostdlib",
-]
-
-MAIN_DEPS = [
-    ##"#UNRESOLVED 3: #f: runtime",
-    # "//./stdlib:stdlib",
-    # "//.:ocamlbytecomp",
-    # "//.:ocamlcommon",
-]
-
-#################
-bootstrap_executable(
-    name    = "main.exe",
-    visibility = ["//visibility:public"],
-    exe     = "main",
-    main    = ":Main",
-    deps = MAIN_DEPS + [
-        ":Main",
-    ],
-)
-
-OPTMAIN_OPTS = [
-    "-principal",
-    "-nostdlib",
-]
-
-OPTMAIN_DEPS = [
-    ##"#UNRESOLVED 3: #f: runtime",
-    # "//./stdlib:stdlib",
-    # "//.:ocamlcommon",
-    # "//.:ocamlmiddleend",
-    # "//.:ocamloptcomp",
-]
-
-#################
-bootstrap_executable(
-    name    = "optmain.exe",
-    visibility = ["//visibility:public"],
-    exe     = "optmain",
-    main    = ":Optmain",
-    deps = OPTMAIN_DEPS + [
-        ":Optmain",
-    ],
-)
-
-###############################################
-########### Archive/Library Targets ###########
-
-######## ocamlcommon ########
-OCAMLCOMMON_OPTS = [
-    "-principal",
-    "-nostdlib",
-]
-
-OCAMLCOMMON_DEPS = [
-    # "//./stdlib:stdlib",
-]
-
-##############
-# bootstrap_archive(
-#     name    = "ocamlcommon",
-#     visibility = ["//visibility:public"],
-#     manifest = [
-#         ":Annot",
-#         ":Arg_helper",
-#         ":Ast_helper",
-#         ":Ast_invariants",
-#         ":Ast_iterator",
-#         ":Ast_mapper",
-#         ":Asttypes",
-#         ":Attr_helper",
-#         ":Binutils",
-#         ":Btype",
-#         ":Build_path_prefix_map",
-#         ":Builtin_attributes",
-#         ":Bytesections",
-#         ":CamlinternalMenhirLib",
-#         ":Ccomp",
-#         ":Clflags",
-#         ":Cmi_format",
-#         ":Cmo_format",
-#         ":Cmt2annot",
-#         ":Cmt_format",
-#         ":Compenv",
-#         ":Compile_common",
-#         ":Compmisc",
-#         ":Config",
-#         ":Consistbl",
-#         ":Ctype",
-#         ":Datarepr",
-#         ":Debuginfo",
-#         ":Depend",
-#         ":Diffing",
-#         ":Diffing_with_keys",
-#         ":Dll",
-#         ":Docstrings",
-#         ":Env",
-#         ":Envaux",
-#         ":Errortrace",
-#         ":Ident",
-#         ":Identifiable",
-#         ":Includeclass",
-#         ":Includecore",
-#         ":Includemod",
-#         ":Includemod_errorprinter",
-#         ":Instruct",
-#         ":Int_replace_polymorphic_compare",
-#         ":Lambda",
-#         ":Lazy_backtrack",
-#         ":Lexer",
-#         ":Load_path",
-#         ":Local_store",
-#         ":Location",
-#         ":Longident",
-#         ":Main_args",
-#         ":Makedepend",
-#         ":Matching",
-#         ":Meta",
-#         ":Misc",
-#         ":Mtype",
-#         ":Numbers",
-#         ":Opcodes",
-#         ":Oprint",
-#         ":Outcometree",
-#         ":Parmatch",
-#         ":Parse",
-#         ":Parser",
-#         ":Parsetree",
-#         ":Path",
-#         ":Patterns",
-#         ":Persistent_env",
-#         ":Pparse",
-#         ":Pprintast",
-#         ":Predef",
-#         ":Primitive",
-#         ":Printast",
-#         ":Printlambda",
-#         ":Printpat",
-#         ":Printtyp",
-#         ":Printtyped",
-#         ":Profile",
-#         ":Rec_check",
-#         ":Runtimedef",
-#         ":Signature_group",
-#         ":Simplif",
-#         ":Strongly_connected_components",
-#         ":Stypes",
-#         ":Subst",
-#         ":Switch",
-#         ":Symtable",
-#         ":Syntaxerr",
-#         ":Targetint",
-#         ":Tast_iterator",
-#         ":Tast_mapper",
-#         ":Terminfo",
-#         ":Translattribute",
-#         ":Translclass",
-#         ":Translcore",
-#         ":Translmod",
-#         ":Translobj",
-#         ":Translprim",
-#         ":Type_immediacy",
-#         ":Typeclass",
-#         ":Typecore",
-#         ":Typedecl",
-#         ":Typedecl_immediacy",
-#         ":Typedecl_properties",
-#         ":Typedecl_separability",
-#         ":Typedecl_unboxed",
-#         ":Typedecl_variance",
-#         ":Typedtree",
-#         ":Typemod",
-#         ":Typeopt",
-#         ":Types",
-#         ":Typetexp",
-#         ":Untypeast",
-#         ":Warnings",
-#     ],
-# )
-
-######## ocamlbytecomp ########
-OCAMLBYTECOMP_OPTS = [
-    "-principal",
-    "-nostdlib",
-]
-
-OCAMLBYTECOMP_DEPS = [
-    # "//./stdlib:stdlib",
-    # "//.:ocamlcommon",
-]
-
-##############
-bootstrap_archive(
-    name    = "ocamlbytecomp",
-    visibility = ["//visibility:public"],
-    manifest = [
-        ":Bytegen",
-        ":Bytelibrarian",
-        ":Bytelink",
-        ":Bytepackager",
-        ":Compile",
-        ":Emitcode",
-        ":Errors",
-        ":Maindriver",
-        ":Printinstr",
-    ],
-)
-
-######## ocamlmiddleend ########
-OCAMLMIDDLEEND_OPTS = [
-    "-principal",
-    "-nostdlib",
-]
-
-OCAMLMIDDLEEND_DEPS = [
-    # "//./stdlib:stdlib",
-    # "//.:ocamlcommon",
-]
-
-##############
-bootstrap_archive(
-    name    = "ocamlmiddleend",
-    visibility = ["//visibility:public"],
-    manifest = [
-        ":Alias_analysis",
-        ":Allocated_const",
-        ":Augment_specialised_args",
-        ":Backend_intf",
-        ":Backend_var",
-        ":Build_export_info",
-        ":Clambda",
-        ":Clambda_primitives",
-        ":Closure",
-        ":Closure_conversion",
-        ":Closure_conversion_aux",
-        ":Closure_element",
-        ":Closure_id",
-        ":Closure_middle_end",
-        ":Closure_offsets",
-        ":Closure_origin",
-        ":Cmx_format",
-        ":Cmxs_format",
-        ":Compilation_unit",
-        ":Compilenv",
-        ":Convert_primitives",
-        ":Effect_analysis",
-        ":Export_id",
-        ":Export_info",
-        ":Export_info_for_pack",
-        ":Extract_projections",
-        ":Find_recursive_functions",
-        ":Flambda",
-        ":Flambda_invariants",
-        ":Flambda_iterators",
-        ":Flambda_middle_end",
-        ":Flambda_to_clambda",
-        ":Flambda_utils",
-        ":Freshening",
-        ":Id_types",
-        ":Import_approx",
-        ":Inconstant_idents",
-        ":Initialize_symbol_to_let_symbol",
-        ":Inline_and_simplify",
-        ":Inline_and_simplify_aux",
-        ":Inlining_cost",
-        ":Inlining_decision",
-        ":Inlining_decision_intf",
-        ":Inlining_stats",
-        ":Inlining_stats_types",
-        ":Inlining_transforms",
-        ":Internal_variable_names",
-        ":Invariant_params",
-        ":Lift_code",
-        ":Lift_constants",
-        ":Lift_let_to_initialize_symbol",
-        ":Linkage_name",
-        ":Mutable_variable",
-        ":Parameter",
-        ":Pass_wrapper",
-        ":Printclambda",
-        ":Printclambda_primitives",
-        ":Projection",
-        ":Ref_to_variables",
-        ":Remove_free_vars_equal_to_args",
-        ":Remove_unused_arguments",
-        ":Remove_unused_closure_vars",
-        ":Remove_unused_program_constructs",
-        ":Semantics_of_primitives",
-        ":Set_of_closures_id",
-        ":Set_of_closures_origin",
-        ":Share_constants",
-        ":Simple_value_approx",
-        ":Simplify_boxed_integer_ops",
-        ":Simplify_boxed_integer_ops_intf",
-        ":Simplify_common",
-        ":Simplify_primitives",
-        ":Static_exception",
-        ":Symbol",
-        ":Tag",
-        ":Traverse_for_exported_symbols",
-        ":Un_anf",
-        ":Unbox_closures",
-        ":Unbox_free_vars_of_closures",
-        ":Unbox_specialised_args",
-        ":Var_within_closure",
-        ":Variable",
-    ],
-)
-
-######## ocamloptcomp ########
-OCAMLOPTCOMP_OPTS = [
-    "-principal",
-    "-nostdlib",
-]
-
-OCAMLOPTCOMP_DEPS = [
-    # "//./stdlib:stdlib",
-    # "//.:ocamlcommon",
-    # "//.:ocamlmiddleend",
-]
-
-# The bytecode compiler compiled with the native-code compiler
-# ocamlc.opt$(EXE): compilerlibs/ocamlcommon.cmxa \
-#                   compilerlibs/ocamlbytecomp.cmxa $(BYTESTART:.cmo=.cmx)
-# 	$(CAMLOPT_CMD) $(LINKFLAGS) -o $@ $^ -cclib "$(BYTECCLIBS)"
-# bootstrap_executable(
-#     name = "ocamlc.opt",
-#     opts = ["-compat-32"],
-#     deps = [
-#         "//compilerlibs:ocamlcommon",
-#         "//compilerlibs:ocamloptcomp"
-#     ]
-# )
-
-
-
-
-# The native-code compiler
-# OPTSTART=driver/optmain.cmo
-# ocamlopt$(EXE): compilerlibs/ocamlcommon.cma compilerlibs/ocamloptcomp.cma \
-#           $(OPTSTART)
-# 	$(CAMLC) $(LINKFLAGS) -o $@ $^
-bootstrap_executable(
-    name = "ocamlopt",
-    opts = [],
-    deps = [
-        "//compilerlibs:ocamlcommon",
-        "//compilerlibs:ocamloptcomp",
-        # "//stdlib",
-        "//driver:Optmain"
+        # ":Caml_tex",
+        "//tools:cmpbyt",
+        # ":dumpobj",   ## sys target only
+        # ":Eqparsetree",
+        "//tools:ocamlobjinfo",
+        "//tools:ocamlcmt",
+        "//tools:ocamlcp",
+        "//tools:ocamldep",
+        "//tools:ocamlmklib",
+        "//tools:ocamlmktop",
+        "//tools:ocamloptp",
+        "//tools:ocamlprof",
+        "//tools:primreq",
+        "//tools:stripdebug",
     ]
+    ## TODO:
+    # ] + select({
+    #     "//compilers/mode:native": [":Lintapidiff.opt"]
+    #     "//conditions:default": []
+    # })
 )
 
-# The native-code compiler compiled with itself
-# ocamlopt.opt$(EXE): \
-#                     compilerlibs/ocamlcommon.cmxa \
-#                     compilerlibs/ocamloptcomp.cmxa \
-#                     $(OPTSTART:.cmo=.cmx)
-# 	$(CAMLOPT_CMD) $(LINKFLAGS) -o $@ $^
-
-
-################
-# ocamlc.opt$(EXE): compilerlibs/ocamlcommon.cmxa \
-#                   compilerlibs/ocamlbytecomp.cmxa $(BYTESTART:.cmo=.cmx)
-# 	$(CAMLOPT_CMD) $(LINKFLAGS) -o $@ $^ -cclib "$(BYTECCLIBS)"
-
-
-
-#############################
-####  Singleton Targets  ####
-
-########################
-####  Rule Targets  ####
-
-################  rule  ################
-## (
-##   (copy main.exe ocamlc.byte)
-## )
-################  rule  ################
-## (
-##   (copy optmain.exe ocamlopt.byte)
-## )
