--- a/compilerlibs/BUILD.bazel
+++ b/compilerlibs/BUILD.bazel
@@ -1,6 +1,6 @@
 load("//bzl:rules.bzl",
-     "bootstrap_archive",
-     "bootstrap_library")
+     "boot_archive",
+     "boot_library")
 
 ## NB: there is no compelling reason that we should put these targets
 ## here in this empty directory. Better to build locally; for example,
@@ -22,8 +22,8 @@ load("//bzl:rules.bzl",
 # COMMON = $(UTILS) $(PARSING) $(TYPING) $(LAMBDA) $(COMP)
 
 ## no //middle_end stuff:
-# bootstrap_library(
-bootstrap_archive(
+# boot_library(
+boot_archive(
     name = "ocamlcommon",
     opts = ["-linkall"],
     manifest  = [
@@ -52,7 +52,7 @@ bootstrap_archive(
 # compilerlibs/ocamlbytecomp.cmxa: $(BYTECOMP_CMI) $(BYTECOMP:.cmo=.cmx)
 # 	$(CAMLOPT) -a $(OCAML_NATDYNLINKOPTS) -o $@ $(BYTECOMP:.cmo=.cmx)
 
-# bootstrap_archive(
+# boot_archive(
 #     ## FIXME: move to //bytecomp:ocamlbytecomp (or :bytecomp.archive?)
 #     name = "ocamlbytecomp",
 #     opts = select({
@@ -86,7 +86,7 @@ bootstrap_archive(
 
 ## NOTE: moved to //middle_end:ocamlmiddleend
 
-# bootstrap_archive(
+# boot_archive(
 #     name    = "ocamlmiddlend",
 #     visibility = ["//visibility:public"],
 #     opts = ["-linkall"],
@@ -94,31 +94,6 @@ bootstrap_archive(
 #         "//middle_end:ocamlmiddleend",
 #     ],
 # )
-
-################
-## ocamloptcomp.[cma,cmxa]
-# ASMCOMP = \
-#   $(ARCH_SPECIFIC_ASMCOMP) \
-#   asmcomp/arch.cmo \
-#   ... etc...
-# OPTCOMP = $(MIDDLE_END) $(ASMCOMP)
-# OPTCOMP_CMI = $(MIDDLE_END_CMI) $(ASMCOMP_CMI)
-
-# compilerlibs/ocamloptcomp.cma: $(OPTCOMP_CMI) $(OPTCOMP)
-# 	$(CAMLC) -a -o $@ $(OPTCOMP)
-
-# bootstrap_library(
-bootstrap_archive(
-    name    = "ocamloptcomp",
-    visibility = [
-        "//visibility:public",
-        # "//testsuite:__pkg__",
-    ],
-    manifest = [
-        "//asmcomp:ocamloptcomp",
-        "//middle_end:ocamlmiddleend" # ocamloptcomp",
-    ],
-)
 
 ################
 ## compilerlibs/ocamltoplevel.[cma,cmxa]: see //toplevel:ocamltoplevel
