--- a/config/BUILD.bazel
+++ b/config/BUILD.bazel
@@ -1,13 +1,22 @@
 load("@bazel_skylib//rules:common_settings.bzl",
-     "bool_flag", "bool_setting")
+     "bool_flag", "bool_setting",
+     "string_list_flag")
 
 package(default_visibility = ["//visibility:public"])
+
+string_list_flag(
+    name = "manifest",
+    build_setting_default = []
+)
 
 bool_flag( name = "debug", build_setting_default = False)
 config_setting(name = "debug?", flag_values = {":debug": "True"})
 
 bool_flag( name = "instrumented", build_setting_default = False)
 config_setting(name = "instrumented?", flag_values = {":instrumented": "True"})
+
+bool_flag( name = "sig_src", build_setting_default = False)
+config_setting(name = "sig_src?", flag_values = {":sig_src": "True"})
 
 config_setting(
     name = "macos_fastbuild?",
