--- a/lambda/BUILD.bazel
+++ b/lambda/BUILD.bazel
@@ -1,7 +1,7 @@
 load("//bzl:rules.bzl",
-     "bootstrap_library",
-     "bootstrap_module",
-     "bootstrap_signature",
+     "boot_library",
+     "boot_module",
+     "boot_signature",
 )
 
 load("//config:CONFIG.bzl",
@@ -25,7 +25,7 @@ SIG_OPTS    = OC_COMMON_CFLAGS + PLATFORM_CFLAGS
 
 STDLIB = ["//boot/lib:stdlib"]
 
-bootstrap_library(
+boot_library(
     name = "lambda",
     manifest  = [
         ":Debuginfo",
@@ -44,7 +44,7 @@ bootstrap_library(
     ],
 )
 
-bootstrap_library(
+boot_library(
     name = "ocamlcommon",
     manifest  = [
         ":Debuginfo",
@@ -66,7 +66,7 @@ bootstrap_library(
 )
 
 ################################################################
-bootstrap_module(
+boot_module(
     name   = "Debuginfo",
     struct = "debuginfo.ml",
     sig    = "Debuginfo_cmi",
@@ -91,7 +91,7 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Debuginfo_cmi",
     src  = "debuginfo.mli",
     opts = SIG_OPTS,
@@ -103,7 +103,7 @@ bootstrap_signature(
     visibility = ["//middle_end:__pkg__"]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Lambda",
     struct = "lambda.ml",
     sig    = "Lambda_cmi",
@@ -132,7 +132,7 @@ bootstrap_module(
     ],
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Lambda_cmi",
     src  = "lambda.mli",
     opts = SIG_OPTS,
@@ -153,7 +153,7 @@ bootstrap_signature(
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Matching",
     struct = "matching.ml",
     sig    = "Matching_cmi",
@@ -193,7 +193,7 @@ bootstrap_module(
     visibility = ["//bytecomp:__pkg__"]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Matching_cmi",
     src  = "matching.mli",
     opts = SIG_OPTS,
@@ -206,7 +206,7 @@ bootstrap_signature(
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Printlambda",
     struct = "printlambda.ml",
     sig    = "Printlambda_cmi",
@@ -236,7 +236,7 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Printlambda_cmi",
     src  = "printlambda.mli",
     opts = SIG_OPTS,
@@ -252,7 +252,7 @@ bootstrap_signature(
 # lambda/runtimedef.ml: lambda/generate_runtimedef.sh runtime/caml/fail.h \
 #     runtime/primitives
 # 	$^ > $@
-bootstrap_module(
+boot_module(
     name   = "Runtimedef",
     struct = "runtimedef.ml",
     sig    = "Runtimedef_cmi",
@@ -285,7 +285,7 @@ genrule(
     visibility = ["//visibility:public"]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Runtimedef_cmi",
     src  = "runtimedef.mli",
     opts = SIG_OPTS,
@@ -294,7 +294,7 @@ bootstrap_signature(
     data = ["//runtime:primitives"],
 )
 
-bootstrap_module(
+boot_module(
     name   = "Simplif",
     struct = "simplif.ml",
     sig    = "Simplif_cmi",
@@ -324,7 +324,7 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Simplif_cmi",
     src  = "simplif.mli",
     opts = SIG_OPTS,
@@ -335,7 +335,7 @@ bootstrap_signature(
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Switch",
     struct = "switch.ml",
     sig    = "Switch_cmi",
@@ -353,7 +353,7 @@ bootstrap_module(
      ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Switch_cmi",
     src  = "switch.mli",
     opts = SIG_OPTS,
@@ -362,7 +362,7 @@ bootstrap_signature(
     visibility = ["//middle_end/flambda:__pkg__"]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Tmc",
     struct = "tmc.ml",
     sig    = "Tmc_cmi",
@@ -372,7 +372,7 @@ bootstrap_module(
     ],
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Tmc_cmi",
     src  = "tmc.mli",
     opts = SIG_OPTS,
@@ -381,7 +381,7 @@ bootstrap_signature(
     ],
 )
 
-bootstrap_module(
+boot_module(
     name   = "Translattribute",
     struct = "translattribute.ml",
     sig    = "Translattribute_cmi",
@@ -404,7 +404,7 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Translattribute_cmi",
     src  = "translattribute.mli",
     opts = SIG_OPTS,
@@ -417,7 +417,7 @@ bootstrap_signature(
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Translclass",
     struct = "translclass.ml",
     sig    = "Translclass_cmi",
@@ -448,7 +448,7 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Translclass_cmi",
     src  = "translclass.mli",
     opts = SIG_OPTS,
@@ -463,7 +463,7 @@ bootstrap_signature(
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Translcore",
     struct = "translcore.ml",
     sig    = "Translcore_cmi",
@@ -503,7 +503,7 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Translcore_cmi",
     src  = "translcore.mli",
     opts = SIG_OPTS,
@@ -520,7 +520,7 @@ bootstrap_signature(
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Translmod",
     struct = "translmod.ml",
     sig    = "Translmod_cmi",
@@ -560,7 +560,7 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Translmod_cmi",
     src  = "translmod.mli",
     opts = SIG_OPTS,
@@ -574,7 +574,7 @@ bootstrap_signature(
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Translobj",
     struct = "translobj.ml",
     sig    = "Translobj_cmi",
@@ -595,7 +595,7 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Translobj_cmi",
     src  = "translobj.mli",
     opts = SIG_OPTS,
@@ -607,7 +607,7 @@ bootstrap_signature(
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Translprim",
     struct = "translprim.ml",
     sig    = "Translprim_cmi",
@@ -639,7 +639,7 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Translprim_cmi",
     src  = "translprim.mli",
     opts = SIG_OPTS,
