--- a/platforms/BUILD.bazel
+++ b/platforms/BUILD.bazel
@@ -51,4 +51,8 @@ config_setting(name = "macos_arm64?",
                constraint_values = ["@platforms//cpu:arm64",
                                     "@platforms//os:macos"])
 
+config_setting(name = "windows_x86_32?",
+               constraint_values = ["@platforms//cpu:x86_32",
+                                    "@platforms//os:windows"])
+
 
