--- a/toolchain/adapters/bootstrap/BUILD.bazel
+++ b/toolchain/adapters/bootstrap/BUILD.bazel
@@ -6,27 +6,66 @@ load(":BUILD.bzl", "bootstrap_toolchain_adapter")
 ## come with the distribution. Everything else in //boot/bin and
 ## //boot/lib is compiled using those tools. Plus ocamlyacc which is
 ## implemented in C.
+
+## Boot toolchain can only produce VM executables (vm>vm, vm>sys,
+## vm>arm64, etc.).
+
+# To produce vm>sys pass --//platforms/xtarget:sys vm>sys is a cross
+# compiler, we produce it using a vm>vm compiler. so
+# --platforms=//platforms/target:vm selects the *>vm toolchain; we
+# then need another arg (cross-compile target or xtarget) to tell the
+# selected toolchain what kind of output to emit.
+
+# this tc is for endo-compilation, vm.vm > vm.vm
 bootstrap_toolchain_adapter(
     name        = "bootstrap",
-    build_host  = "boot",
-    target_host = "boot",
-    compiler    = "//boot/bin:ocamlc", # alias to //boot:ocamlc
-    # ocamlopt?
-    copts       = [
+    build_host  = "vm",
+    target_host = "vm",
+    compiler    = "//boot:ocamlc.byte",
+    copts       = [ ## compile opts (sigs/modules only)
         "-strict-sequence", "-absname",
         "-w", "+a-4-9-41-42-44-45-48",
         "-warn-error", "+A",
-        "-bin-annot", "-nostdlib", "-principal",
+        "-bin-annot",
+        "-nostdlib",
+        "-principal",
     ],
     primitives  = "//runtime:primitives",
-    lexer       = "//boot/bin:ocamllex",  # alias to //boot:ocamllex
-    yacc        = "//yacc:ocamlyacc",
-    #yacc        = "//boot/bin:ocamlyacc", # alias to //yacc:ocamlyacc",
-    tool_runner = "//boot/bin:ocamlrun",  # alias to //runtime:ocamlrun
+    camlheaders = [
+        # "//stdlib:camlheaders"
+        "//stdlib:camlheader", "//stdlib:target_camlheader",
+        "//stdlib:camlheaderd", "//stdlib:target_camlheaderd",
+        "//stdlib:camlheaderi", "//stdlib:target_camlheaderi"
+    ],
+    lexer       = "//boot:ocamllex.byte",
+    yacc        = "//boot:ocamlyacc.exe",
+    tool_runner = "//boot:ocamlrun.exe",  # alias to //runtime:ocamlrun
     # std_exit = "//stdlib:Std_exit"
-    ##  => //boot/lib:stdlib
 )
 
+# this tc used to cross-compile from vm.vm to vm.sys
+bootstrap_toolchain_adapter(
+    name        = "cross",
+    build_host  = "vm",
+    target_host = "vm",
+    xtarget_host = "sys",
+    compiler    = "//boot:ocamlc.byte",
+    copts       = [
+        # "-strict-sequence", "-absname",
+        # "-w", "+a-4-9-41-42-44-45-48",
+        # "-warn-error", "+A",
+        # "-bin-annot",
+        # "-nostdlib",
+        # "-principal",
+    ],
+    # primitives  = "//runtime:primitives",
+    lexer       = "//boot:ocamllex.byte",
+    yacc        = "//boot:ocamlyacc.exe",
+    tool_runner = "//boot:ocamlrun.exe",
+    # std_exit = "//stdlib:Std_exit"
+)
+
+################################################################
 # to produce compiler as a dev tool, build_host == target_host,
 # and the toolchain uses the boot compiler
 bootstrap_toolchain_adapter(
