--- a/utils/BUILD.bazel
+++ b/utils/BUILD.bazel
@@ -1,15 +1,28 @@
+## make log:
+
+# ./boot/ocamlrun ./boot/ocamlc  (twice!)
+# -nostdlib -use-prims -g -strict-sequence -principal -absname -w +a-4-9-40-41-42-44-45-48 -warn-error +a -bin-annot -strict-formats
+# -c utils/warnings.ml
+
+# ./boot/ocamlrun ./ocamlopt
+# -nostdlib -g -strict-sequence -principal -absname -w +a-4-9-40-41-42-44-45-48 -warn-error +a -bin-annot -strict-formats
+# -c utils/warnings.ml
+
+# ./boot/ocamlrun ./boot/ocamlc
+# -nostdlib -use-prims -g -strict-sequence -principal -absname -w +a-4-9-40-41-42-44-45-48 -warn-error +a -bin-annot -strict-formats
+
 load("//bzl:rules.bzl",
-     "bootstrap_archive",
-     "bootstrap_executable",
-     "bootstrap_library",
-     "bootstrap_module",
-     "bootstrap_signature",
+     "boot_archive",
+     "boot_executable",
+     "boot_library",
+     "boot_module",
+     "boot_signature",
 )
 
 load("//config:CONFIG.bzl",
      "CPP",
      # "USE_PRIMS",
-     "DATA_PRIMS",
+     # "DATA_PRIMS",
      "OC_COMMON_CFLAGS",
      "PLATFORM_CFLAGS"
      # "ROOT_MODULE_OPTS",
@@ -44,7 +57,7 @@ exports_files([ ## for //otherlibs/dynlink:Dynlink_compilerlibs
 # CAMLC=$(BOOT_OCAMLC) -g -nostdlib -I boot -use-prims runtime/primitives
 
 MODULE_OPTS = OC_COMMON_CFLAGS + PLATFORM_CFLAGS
-SIG_OPTS    = OC_COMMON_CFLAGS + PLATFORM_CFLAGS
+SIG_OPTS    = [] ## OC_COMMON_CFLAGS + PLATFORM_CFLAGS
 
 # MODULE_OPTS = ROOT_MODULE_OPTS
 # ##+ ["-I", "boot"]
@@ -52,15 +65,13 @@ SIG_OPTS    = OC_COMMON_CFLAGS + PLATFORM_CFLAGS
 
 # SIG_OPTS = ROOT_SIG_OPTS
 
-STDLIB = ["//boot/lib:stdlib", "//stdlib:Std_exit"]
-
 ################################################################
 ## expunge utility, defined in root Makefile:
 # The "expunge" utility
 # $(expunge): compilerlibs/ocamlcommon.cma compilerlibs/ocamlbytecomp.cma \
 #          toplevel/expunge.cmo
 # 	$(CAMLC) $(LINKFLAGS) -o $@ $^
-bootstrap_executable(
+boot_executable(
     name = "expunge",
     main = "//toplevel:Expunge",
     deps = [
@@ -79,8 +90,8 @@ bootstrap_executable(
 # 	$(CAMLC) -a -linkall -o $@ $(COMMON)
 
 # obazl testing, build everything
-bootstrap_library(
-# bootstrap_archive(
+boot_library(
+# boot_archive(
     name = "utils",
     # mode = "bytecode",
     manifest  = [
@@ -110,7 +121,7 @@ bootstrap_library(
     visibility = ["//compilerlibs:__pkg__"]
 )
 
-bootstrap_library(
+boot_library(
     name = "ocamlcommon",
     # mode = "bytecode",
     manifest  = [
@@ -144,13 +155,12 @@ bootstrap_library(
 )
 
 ################################################################
-bootstrap_module(
+boot_module(
     name   = "Arg_helper",
     struct = "arg_helper.ml",
     sig    = "Arg_helper_cmi",
     opts = MODULE_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         "//stdlib:Stdlib.String",
         "//stdlib:Stdlib.Printf",
         "//stdlib:Stdlib.Printexc",
@@ -163,22 +173,20 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Arg_helper_cmi",
     src  = "arg_helper.mli",
     opts = SIG_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         "//stdlib:Stdlib.Map",
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Binutils",
     struct = "binutils.ml",
     sig    = "Binutils_cmi",
     opts = MODULE_OPTS,
-    data = DATA_PRIMS,
     ## DEMO: we can depend on individual submodules instead of the entire lib
     deps   = [
         ## "//stdlib" ## depend on entire Stdlib
@@ -207,27 +215,26 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Binutils_cmi",
     src  = "binutils.mli",
     opts = SIG_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         "//stdlib:Stdlib.Result",
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Build_path_prefix_map",
     struct = "build_path_prefix_map.ml",
     sig    = "Build_path_prefix_map_cmi",
     opts = MODULE_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         "//stdlib:Stdlib.String",
         "//stdlib:Stdlib.Printf",
         "//stdlib:Stdlib.List",
         "//stdlib:Stdlib.Buffer",
+        "//stdlib:Stdlib"
     ],
     visibility = [
         "//otherlibs/dynlink:__pkg__",
@@ -236,22 +243,21 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Build_path_prefix_map_cmi",
     src  = "build_path_prefix_map.mli",
     opts = SIG_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
+        "//stdlib:Stdlib"
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Ccomp",
     struct = "ccomp.ml",
     sig    = "Ccomp_cmi",
     opts = MODULE_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         ":Profile", ## (Utils Profile)
         ":Misc", ## (Utils Misc)
         ":Load_path", ## (Utils Load_path)
@@ -272,22 +278,21 @@ bootstrap_module(
     ],
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Ccomp_cmi",
     src  = "ccomp.mli",
     opts = SIG_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
+        "//stdlib:Stdlib"
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Clflags",
     struct = "clflags.ml",
     sig    = "Clflags_cmi",
     opts = MODULE_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         ":Profile", ## (Utils Profile)
         ":Numbers", ## (Utils Numbers)
         ":Misc", ## (Utils Misc)
@@ -314,12 +319,11 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Clflags_cmi",
     src  = "clflags.mli",
     opts = SIG_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         ":Profile", ## (Utils Profile)
         ":Misc", ## (Utils Misc)
         "//stdlib:Stdlib.Digest",
@@ -328,13 +332,12 @@ bootstrap_signature(
     visibility = ["//driver:__pkg__"]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Config",
     struct = "config.ml",
     sig    = "Config_cmi",
     opts = MODULE_OPTS,
-    data = DATA_PRIMS,
-    deps   = [ # STDLIB + [
+    deps   = [ # [
         "//stdlib:Stdlib.List",
         "//stdlib:Stdlib.Printf",
         "//stdlib:Stdlib.String",
@@ -399,29 +402,28 @@ genrule(
     ])
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Config_cmi",
     src  = "config.mli",
     opts = SIG_OPTS,
-    data = DATA_PRIMS,
-    deps   = [ # STDLIB + [
-        "//stdlib:Stdlib.List",
-        "//stdlib:Stdlib.Printf",
-        "//stdlib:Stdlib.String",
-        "//stdlib:Stdlib.Sys"
+    deps   = [ # [
+        # "//stdlib:Stdlib.List",
+        # "//stdlib:Stdlib.Printf",
+        # "//stdlib:Stdlib.String",
+        # "//stdlib:Stdlib.Sys",
+        "//stdlib:Stdlib"
     ],
     visibility = [
         "//otherlibs/dynlink:__pkg__",
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Consistbl",
     struct = "consistbl.ml",
     sig    = "Consistbl_cmi",
     opts = MODULE_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         ":Misc", ## (Utils Misc)
         "//stdlib:Stdlib.Set",
         "//stdlib:Stdlib.Map",
@@ -436,12 +438,11 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Consistbl_cmi",
     src  = "consistbl.mli",
     opts = SIG_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         ":Misc", ## (Utils Misc)
         "//stdlib:Stdlib.Set",
         "//stdlib:Stdlib.Map",
@@ -450,13 +451,12 @@ bootstrap_signature(
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Diffing",
     struct = "diffing.ml",
     sig    = "Diffing_cmi",
     opts = MODULE_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         ":Misc", ## (Utils Misc)
         "//stdlib:Stdlib.Option",
         "//stdlib:Stdlib.List",
@@ -466,25 +466,23 @@ bootstrap_module(
     visibility = ["//typing:__pkg__"]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Diffing_cmi",
     src  = "diffing.mli",
     opts = SIG_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         ":Misc", ## (Utils Misc)
         "//stdlib:Stdlib.Format",
         "//stdlib:Stdlib.Digest",
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Diffing_with_keys",
     struct = "diffing_with_keys.ml",
     sig    = "Diffing_with_keys_cmi",
     opts = MODULE_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         ":Misc", ## (Utils Misc)
         ":Diffing", ## (Utils Diffing)
         "//stdlib:Stdlib.Map",
@@ -496,25 +494,23 @@ bootstrap_module(
     visibility = ["//typing:__pkg__"]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Diffing_with_keys_cmi",
     src  = "diffing_with_keys.mli",
     opts = SIG_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         ":Diffing", ## (Utils Diffing)
         "//stdlib:Stdlib.Format",
     ],
     visibility = ["//typing:__pkg__"]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Domainstate",
     struct = "domainstate.ml",
     sig    = "Domainstate_cmi",
     opts = MODULE_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
     ],
     visibility = ["//asmcomp:__subpackages__"]
 )
@@ -538,13 +534,11 @@ genrule(
     ])
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Domainstate_cmi",
     src  = "domainstate.mli",
     opts = SIG_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
-    ]
+    deps   = ["//stdlib:Stdlib"]
 )
 
 genrule(
@@ -573,13 +567,12 @@ genrule(
 # 	$(CPP) -I runtime/caml $< > $@
 
 
-bootstrap_module(
+boot_module(
     name   = "Identifiable",
     struct = "identifiable.ml",
     sig    = "Identifiable_cmi",
     opts = MODULE_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         ":Misc", ## (Utils Misc)
         "//stdlib:Stdlib.Set",
         "//stdlib:Stdlib.Printf",
@@ -596,12 +589,11 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Identifiable_cmi",
     src  = "identifiable.mli",
     opts = SIG_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         "//stdlib:Stdlib.Set",
         "//stdlib:Stdlib.Map",
         "//stdlib:Stdlib.Hashtbl",
@@ -614,13 +606,12 @@ bootstrap_signature(
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Int_replace_polymorphic_compare",
     struct = "int_replace_polymorphic_compare.ml",
     sig    = "Int_replace_polymorphic_compare_cmi",
     opts = MODULE_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
     ],
     visibility = [
         "//lambda:__pkg__",
@@ -630,22 +621,19 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Int_replace_polymorphic_compare_cmi",
     src  = "int_replace_polymorphic_compare.mli",
     opts = SIG_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
-    ]
+    deps   = ["//stdlib:Stdlib"]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Lazy_backtrack",
     struct = "lazy_backtrack.ml",
     sig    = "Lazy_backtrack_cmi",
     opts = MODULE_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         "//stdlib:Stdlib.Either",
     ],
     visibility = [
@@ -654,24 +642,22 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Lazy_backtrack_cmi",
     src  = "lazy_backtrack.mli",
     opts = SIG_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         "//stdlib:Stdlib.Either",
     ],
     visibility = ["//typing:__pkg__"]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Load_path",
     struct = "load_path.ml",
     sig    = "Load_path_cmi",
     opts = MODULE_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         ":Misc", ## (Utils Misc)
         ":Local_store", ## (Utils Local_store)
         ":Config", ## (Utils Config)
@@ -695,22 +681,21 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Load_path_cmi",
     src  = "load_path.mli",
     opts = SIG_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
+        "//stdlib:Stdlib_cmi"
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Local_store",
     struct = "local_store.ml",
     sig    = "Local_store_cmi",
     opts = MODULE_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         "//stdlib:Stdlib.List",
         "//stdlib:Stdlib.Fun",
     ],
@@ -721,22 +706,21 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Local_store_cmi",
     src  = "local_store.mli",
-    opts = SIG_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    opts = SIG_OPTS + ["-open", "Stdlib"], # "-I", "bazel-out/darwin-fastbuild/bin/stdlib"], FIXME
+    deps   = [
+        "//stdlib:Stdlib_cmi"
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Misc",
     struct = "misc.ml",
     sig    = "Misc_cmi",
     opts = MODULE_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         ":Config", ## (Utils Config)
         ":Build_path_prefix_map", ## (Utils Build_path_prefix_map)
         "//stdlib:Stdlib.Sys",
@@ -776,12 +760,11 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Misc_cmi",
     src  = "misc.mli",
     opts = SIG_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         ":Config_cmi",
         ":Build_path_prefix_map",
         "//stdlib:Stdlib.String",
@@ -797,13 +780,12 @@ bootstrap_signature(
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Numbers",
     struct = "numbers.ml",
     sig    = "Numbers_cmi",
     opts = MODULE_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         ":Misc",
         ":Identifiable",
         "//stdlib:Stdlib.Set",
@@ -823,12 +805,11 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Numbers_cmi",
     src  = "numbers.mli",
     opts = SIG_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         ":Identifiable",
         "//stdlib:Stdlib.Set",
         "//stdlib:Stdlib.Map",
@@ -837,13 +818,12 @@ bootstrap_signature(
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Profile",
     struct = "profile.ml",
     sig    = "Profile_cmi",
     opts = MODULE_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         ":Misc",
         "//stdlib:Stdlib.Sys",
         "//stdlib:Stdlib.String",
@@ -866,23 +846,21 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Profile_cmi",
     src  = "profile.mli",
     opts = SIG_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         "//stdlib:Stdlib.Format",
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Strongly_connected_components",
     struct = "strongly_connected_components.ml",
     sig    = "Strongly_connected_components_cmi",
     opts = MODULE_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         ":Numbers",
         ":Misc",
         ":Identifiable",
@@ -896,12 +874,11 @@ bootstrap_module(
     visibility = ["//middle_end/flambda:__pkg__"]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Strongly_connected_components_cmi",
     src  = "strongly_connected_components.mli",
     opts = SIG_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         ":Identifiable",
         "//stdlib:Stdlib.Set",
         "//stdlib:Stdlib.Map",
@@ -909,13 +886,12 @@ bootstrap_signature(
     ]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Targetint",
     struct = "targetint.ml",
     sig    = "Targetint_cmi",
     opts = MODULE_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         ":Misc",
         "//stdlib:Stdlib.Sys",
         "//stdlib:Stdlib.Int64",
@@ -926,24 +902,22 @@ bootstrap_module(
     visibility = ["//asmcomp:__pkg__"]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Targetint_cmi",
     src  = "targetint.mli",
     opts = SIG_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         "//stdlib:Stdlib.Format",
     ],
     visibility = ["//asmcomp:__pkg__"]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Terminfo",
     struct = "terminfo.ml",
     sig    = "Terminfo_cmi",
     opts = MODULE_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         "//stdlib:Stdlib.Sys",
         "//stdlib:Stdlib.Printf",
     ],
@@ -954,22 +928,19 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Terminfo_cmi",
     src  = "terminfo.mli",
     opts = SIG_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
-    ]
+    deps   = ["//stdlib:Stdlib_cmi"]
 )
 
-bootstrap_module(
+boot_module(
     name   = "Warnings",
     struct = "warnings.ml",
     sig    = "Warnings_cmi",
     opts = MODULE_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
+    deps   = [
         ":Misc",
         "//stdlib:Stdlib.String",
         "//stdlib:Stdlib.Printf",
@@ -996,13 +967,12 @@ bootstrap_module(
     ]
 )
 
-bootstrap_signature(
+boot_signature(
     name = "Warnings_cmi",
     src  = "warnings.mli",
     opts = SIG_OPTS,
-    data = DATA_PRIMS,
-    deps   = STDLIB + [
-        "//stdlib:Stdlib.Lexing",
-        "//stdlib:Stdlib.Lazy",
+    deps   = [
+        "//stdlib:Stdlib.Lexing_cmi",
+        "//stdlib:Stdlib.Lazy_cmi",
     ]
 )
